<resources>
    <string name="app_name">farmApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_s_login">user\'s login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="phone">email</string>
    <string name="farmer_s_login">Farmer\'s login</string>
    <string name="are_you_a_farmer">Are you a farmer?</string>
    <string name="search_here">Search here</string>
    <string name="categories">Categories</string>
    <string name="all">All</string>
    <string name="vegetable">vegetable</string>
    <string name="fruits">fruits</string>
    <string name="grains">grains</string>
    <string name="tubers">tubers</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="home_address">Home address:</string>
    <string name="farm_address">Farm address:</string>
    <string name="farm_product">farm product:</string>
    <string name="confirm">Log Out</string>
    <string name="total_balance_id">Total Balance ID</string>
    <string name="withdraw">Withdraw</string>
    <string name="fund_wallet">fund wallet</string>
    <string name="potatoes">potatoes</string>
    <string name="debit">Debit</string>
    <string name="product">product</string>
    <string name="wallet">Wallet</string>
    <string name="profile">profile</string>
    <string name="farmers">Login</string>
    <string name="users">Sign Up</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="balance">Balance:</string>
    <string name="amount">Amount</string>
    <string name="withdraw_to">Withdraw to:</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="withdrawtbn">withdraw</string>
    <string name="new_user">New user?</string>
    <string name="create_account">Create Account?</string>
    <string name="change_language">Change language</string>
    <string name="phone2">email</string>
    <string name="enter_otp">password</string>
    <string name="create">create</string>
    <string name="log_in2">Log in</string>
    <string name="farmer">Farmer</string>
    <string name="user">User</string>
    <string name="oranges">oranges</string>
    <string name="_53kg_of_sweet_oranges_available_for_sale">_53kg_of_sweet_oranges_available_for_sale</string>
    <string name="name2">name</string>
    <string name="adapteroranges" translatable="false">oranges</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_course_description">Enter Course Description</string>
    <string name="select_image">Select Image</string>
    <string name="add_your_product">Add Your Product</string>
    <string name="farmersp">Farmer</string>
    <string name="select_image_link">Select Image Link</string>
    <string name="phonelg">phone</string>
    <string name="forgot_passwordlg">Forgot password?</string>
    <string name="log_inlg">Log in</string>
    <string name="full_name">Full name</string>
    <string name="phone3">phone</string>
    <string name="password">password</string>
    <string name="email1">email</string>
    <string name="accept">Accept</string>
    <string name="reject">reject</string>
    <string name="update">Update</string>
    <string name="name1">name</string>
</resources>