<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ProductFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Abdullahi"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp" />


            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle_bg"
                android:src="@drawable/man" />


        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="12dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/boarder_bg"
                android:scaleType="centerCrop"
                android:src="@drawable/farmers" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:text="@string/are_you_a_farmer"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="18dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:paddingStart="12dp"
                android:drawableStart="@drawable/ic_round_search_24"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:background="@null"
                android:text="@string/search_here"
                android:textAlignment="center" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/all_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/boarder_bg"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp"
                    android:text="@string/all"
                    android:textSize="13sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/vegies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/boarder_bg"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp"
                    android:text="@string/vegetable"
                    android:textSize="13sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/fruit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/boarder_bg"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp"
                    android:text="@string/fruits"
                    android:textSize="13sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/grain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/boarder_bg"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp"
                    android:text="@string/grains"
                    android:textSize="13sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tuber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/boarder_bg"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp"
                    android:text="@string/tubers"
                    android:textSize="13sp"
                    android:textStyle="bold" />



            </LinearLayout>

        </HorizontalScrollView>

        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNumbers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <!--floating action button-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/idFABAddCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:src="@drawable/ic_add"
            app:background="@color/black_shade_1"
            app:backgroundTint="@color/green"
            app:tint="@color/white" />


    </LinearLayout>

</ScrollView>