<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="360dp"
        android:elevation="6dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp">


        <TextView
            android:paddingTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/sign_up"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/boarder_bg">

        <EditText
            android:id="@+id/fullname"
            android:padding="10dp"
            android:layout_width="0dp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:drawableTint="@color/green"
            android:background="@null"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/full_name"/>


    </LinearLayout>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/boarder_bg">

        <EditText
            android:id="@+id/phone_number"
            android:padding="10dp"
            android:layout_width="0dp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:layout_weight="5"
            android:layout_height="50dp"
            android:drawableTint="@color/green"
            android:background="@null"
            android:drawableStart="@drawable/ic_sharp_email_24"
            android:drawablePadding="10dp"
            android:hint="@string/email1"/>



    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/boarder_bg">
    <EditText
        android:id="@+id/user_password"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableTint="@color/green"
        android:background="@null"
        android:drawableStart="@drawable/ic_round_security_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"/>

</LinearLayout>


    <Space
    android:layout_width="wrap_content"
    android:layout_height="30dp"/>

    <Button
        android:id="@+id/create"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/create"/>

</LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>


    <!--progress bar as a loading indicator-->
    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_back"
        android:visibility="gone" />
</LinearLayout>