<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FarmersLoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:paddingTop="20dp"
        android:layout_height="150dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/egoonalogo"/>


    </LinearLayout>

<androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="400dp"
        android:elevation="6dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        >


        <TextView
            android:paddingTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/log_in"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/boarder_bg">
                <EditText
                    android:id="@+id/farmer_id"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress"
                    android:drawableTint="@color/green"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_sharp_email_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/phone"/>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/boarder_bg">
                <EditText
                    android:id="@+id/farmer_password"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:drawableTint="@color/green"
                    android:password="true"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_round_security_24"
                    android:drawablePadding="10dp"
                    android:hint="*******"/>

            </LinearLayout>


            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>
                <Button
                    android:id="@+id/farmersbtn"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/green"
                    android:layout_height="50dp"
                    android:text="@string/log_in"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"/>
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <!--progress-bar for loading indicator-->
    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_back"
        android:visibility="gone" />
</FrameLayout>